View Issue Details

IDProjectCategoryView StatusLast Update
0033327CommunityOCCT:Data Exchangepublic2023-03-27 11:47
Reporterdpasukhi Assigned Todpasukhi  
PrioritynormalSeveritycrash 
Status verifiedResolutionfixed 
Product Version7.7.0 
Target Version7.7.1 
Summary0033327: Data Exchange, IGES Import - SubfigureDef can't read string
Descriptionhttps://dev.opencascade.org/content/iges-crash-cad-assistant-occt-770
Got crash with valid IGES file. File is in attachment.

OpenCASCADE 7.7.0.dev-IR-2021-11-19-c1e15aa538
CAD Assistant 1.6.1 build 2022-01-16.
Steps To Reproducetest bugs iges bug33327
TagsNo tags attached.
Test case number

Attached Files

  • occt_crash_1.iges (52,644 bytes)

Activities

dpasukhi

2023-02-09 20:10

developer   ~0113102

occt_crash_1.iges (52,644 bytes)

git

2023-03-09 20:08

administrator   ~0113248

Branch CR33327 has been created by dpasukhi.

SHA-1: d3126788c846077899e5a1c62edb3d7f16140c9e


Detailed log of new commits:

Author: dpasukhi
Date: Thu Mar 9 17:08:39 2023 +0000

    0033327: Data Exchange, IGES Import - SubfigureDef can't read string
    
    Fixed problem with texted types
    Added checking for null string for subfigure via XCAF transferring

git

2023-03-10 02:30

administrator   ~0113254

Branch CR33327 has been updated forcibly by dpasukhi.

SHA-1: 0252e6edb0af8542fb451a1de79290d3d3f8df17

dpasukhi

2023-03-10 12:26

developer   ~0113255

Dear IKA,
please review CR33327

Ubuntu tests are OK, see
http://jenkins-test-10.nnov.opencascade.com/view/CR33327-master-dpasukhi/view/COMPARE/
There are some problems with Jenkins (windows OS) But This ticket have no OS dependency places. So, We can believe that all should be fine

I just update parsing text entitites to handle "0H" string and creating not-null theVal string in error case.

ika

2023-03-10 15:22

developer   ~0113259

No remarks.

Dear bugmaster,
please integrate OCCT CR33327

vglukhik

2023-03-27 11:47

administrator   ~0113329

Combination -
OCCT branch : IR-2023-03-24
Products branch : IR-2023-03-24
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Ubuntu2004-64:
OCCT
Total CPU difference: 17860.210000000374 / 18523.170000000337 [-3.58%]
Products
Total CPU difference: 11917.870000000039 / 12541.969999999983 [-4.98%]
Windows-64-VC142:
OCCT
Total CPU difference: 19289.6875 / 19753.9375 [-2.35%]
Products
Total CPU difference: 13790.3125 / 13932.359375 [-1.02%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

Related Changesets

occt: master c51df6bf

2023-03-09 17:08:39

dpasukhi


Committer: vglukhik Details Diff
0033327: Data Exchange, IGES Import - SubfigureDef can't read string

Fixed problem with texted types
Added checking for null string for subfigure via XCAF transferring
Affected Issues
0033327
mod - src/IGESCAFControl/IGESCAFControl_Reader.cxx Diff File
mod - src/IGESData/IGESData_ParamReader.cxx Diff File
mod - src/IGESData/IGESData_ParamReader.hxx Diff File
add - tests/bugs/iges/bug33327 Diff File

Issue History

Date Modified Username Field Change
2023-02-09 20:08 dpasukhi New Issue
2023-02-09 20:08 dpasukhi Assigned To => ika
2023-02-09 20:10 dpasukhi Note Added: 0113102
2023-02-09 20:10 dpasukhi File Added: occt_crash_1.iges
2023-03-09 20:00 dpasukhi Assigned To ika => dpasukhi
2023-03-09 20:08 git Note Added: 0113248
2023-03-10 02:30 git Note Added: 0113254
2023-03-10 12:26 dpasukhi Assigned To dpasukhi => ika
2023-03-10 12:26 dpasukhi Status new => resolved
2023-03-10 12:26 dpasukhi Steps to Reproduce Updated
2023-03-10 12:26 dpasukhi Note Added: 0113255
2023-03-10 15:22 ika Assigned To ika => bugmaster
2023-03-10 15:22 ika Status resolved => reviewed
2023-03-10 15:22 ika Note Added: 0113259
2023-03-27 11:20 vglukhik Changeset attached => occt master c51df6bf
2023-03-27 11:20 dpasukhi Assigned To bugmaster => dpasukhi
2023-03-27 11:20 dpasukhi Status reviewed => verified
2023-03-27 11:20 dpasukhi Resolution open => fixed
2023-03-27 11:47 vglukhik Note Added: 0113329