0033327: Data Exchange, IGES Import - SubfigureDef can't read string

Fixed problem with texted types
Added checking for null string for subfigure via XCAF transferring